--- a/proyecto 1/client/src/assets/ReporteBase.css
+++ b/proyecto 1/client/src/assets/ReporteBase.css
@@ -2,13 +2,15 @@
 * {
     padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
 }
 
 .main {
     justify-content: center;
     background-color: #B3A492;
     padding: 3%;
-    width: 95%;
+    width: 100%;
+    height: 100vh;
     display: inline-block;
 }
 
@@ -26,6 +28,7 @@
 
 .table {
     margin-top: 1%;
+    width: 95%;
 }
 
 .api {
