--- a/proyecto 1/client/src/assets/ReporteBase.css
+++ b/proyecto 1/client/src/assets/ReporteBase.css
@@ -15,15 +15,26 @@
 }
 
 .title {
+    position: relative;
     font-family:monospace;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 60px;
+}
+
+.title h2 {
+    padding: 15px;
+    background-color: #ad834f;
+    border-radius: 40px;
+    box-shadow: 5px 3px 6px 1px #1d160d33;
 }
 
 .buttons {
     margin-top: 1%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .table {
@@ -35,3 +46,18 @@
     margin-top: 1%;
 }
 
+.logoContainer {
+    position: absolute;
+    left: 0;
+    top: -15px;
+    width: 190px;
+    height: 110px;
+}
+
+.logoContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px 1px #1a140c9a;
+}
