--- a/proyecto 1/client/src/assets/Inicio.css
+++ b/proyecto 1/client/src/assets/Inicio.css
@@ -5,11 +5,18 @@
     height: 100vh;
 }
 
+.fondoContainer {
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
 .botonesCont {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 30px;
-    background-color: rgba(172, 172, 172, 0.514);
+    background-color: rgba(255, 255, 255, 0.514);
     width: 70%;
     height: 70%;
     padding: 20px;
@@ -20,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(165, 167, 166);
+    background-color: rgb(157, 203, 223);
     font-size: 30px;
     border-radius: 20px;
     text-decoration: none;
@@ -30,5 +37,5 @@
 }
 
 .caja:hover {
-    background-color: rgb(134, 134, 134);
+    background-color: rgb(66, 188, 249);
 }
