--- a/proyecto 1/client/src/assets/ReporteBase.css
+++ b/proyecto 1/client/src/assets/ReporteBase.css
@@ -7,10 +7,10 @@
 
 .main {
     justify-content: center;
-    background-color: #B3A492;
+    background-color: #D9D9D9;
     padding: 3%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: inline-block;
 }
 
@@ -25,7 +25,7 @@
 
 .title h2 {
     padding: 15px;
-    background-color: #ad834f;
+    background-color:  rgb(66, 188, 249);
     border-radius: 40px;
     box-shadow: 5px 3px 6px 1px #1d160d33;
 }
