--- a/proyecto 1/client/src/assets/Inicio.css
+++ b/proyecto 1/client/src/assets/Inicio.css
@@ -34,8 +34,25 @@
     color: black;
     font-weight: 600;
     transition: all ease .4s;
+    text-align: center;
+    padding: 8px;
 }
 
 .caja:hover {
     background-color: rgb(66, 188, 249);
+}
+
+.logoInicio {
+    position: absolute;
+    padding: 30px 0px 0px 50px;
+    width: 240px;
+    height: 140px;
+}
+
+.logoInicio img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px 1px #1a140c9a;
 }
